--- a/languages/UniStudy/source_gen/UniStudy/example/Test.html
+++ b/languages/UniStudy/source_gen/UniStudy/example/Test.html
@@ -5,7 +5,7 @@
 <!--BOOTSTRAP IMPORT--><link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script></head>
 <body>
-<main class="container>"
+<main class="container">
 <h1>Universities</h1>
   <h2>University #1: L'Aquila</h2>
   <h3>Departments</h3>
@@ -16,7 +16,7 @@
       <li>
       <h3>Degree courses offered:</h3>
       <ul>
-                <h3>Degree course #1: Computer Science</h3>
+                <li><h3>Degree course #1: Computer Science</h3>
         <ul>
           <li>Code #: 34324</li>
           <li>Reference year: 2023/2024</li>
@@ -97,12 +97,12 @@
           </li>
           <li>
           <h3>Enrolled students:</h3>
-            <ul>
+          <ul>
             <li>Dario D'Ercole [288643]</li>
           </ul>
           </li>
-        </ul>
-        <h3>Degree course #2: Master Degree in Computer Science (ASE)</h3>
+        </ul></li>
+        <li><h3>Degree course #2: Master Degree in Computer Science (ASE)</h3>
         <ul>
           <li>Code #: F-321</li>
           <li>Reference year: 2023/2024</li>
@@ -187,11 +187,11 @@
           </li>
           <li>
           <h3>Enrolled students:</h3>
-            <ul>
+          <ul>
             <li>Dario D'Ercole [288643]</li>
           </ul>
           </li>
-        </ul>
+        </ul></li>
       </ul>
       </li>
       <li>
