Fix html errors

--- a/languages/UniStudy/source_gen/UniStudy/example/Test.html
+++ b/languages/UniStudy/source_gen/UniStudy/example/Test.html
@@ -211,13 +211,13 @@
       <li>
       <h3>Thesis defended:</h3>
       <ul>
-        <h3>Thesis #1: A thesis</h3>
+        <li><h3>Thesis #1: A thesis</h3>
         <ul>
           <li>Thesis type: compilation</li>
           <li>Student: Dario D'Ercole</li>
           <li>Supervisor: Henry Muccini</li>
           <li>Referenced degree course: Computer Science</li>
-        </ul>
+        </ul></li>
       </ul>
       </li>
       <li>
