Added missing property from University

--- a/languages/UniStudy/source_gen/UniStudy/example/Test.html
+++ b/languages/UniStudy/source_gen/UniStudy/example/Test.html
@@ -8,6 +8,7 @@
 <main class="container">
 <h1>Universities</h1>
   <h2>University #1: L'Aquila</h2>
+  <h3>Rector: Henry Muccini</h3>
   <h3>Departments</h3>
   <ul>
     <li>
